# learn_vulkan

./: .gitignore  CMakeLists.txt
cmake/: compile_shaders.cmake  embed-data.cmake
projects/: CMakeLists.txt
projects/common/: CMakeLists.txt
projects/common/include/common/: file.hpp  non_copyable.hpp  pointers.hpp
projects/common/src/common/: file.cpp
projects/renderer/: CMakeLists.txt  main.cpp
projects/renderer/include/Triangle/: TriangleCommandBuffers.hpp
projects/renderer/include/vulkan/: Application.hpp  CommandBuffers.hpp  CommandPool.hpp  DebugUtilsMessenger.hpp  Device.hpp  Drawer.hpp  GraphicsPipeline.hpp  Instance.hpp  QueueFamily.hpp  RenderPass.hpp  Shader.hpp  SwapChain.hpp  SyncObjects.hpp  Window.hpp
projects/renderer/include/vulkan/ImGui/: ImGuiApp.hpp  ImGuiCommandBuffers.hpp  ImGuiRenderPass.hpp
projects/renderer/src/: Drawer.cpp
projects/renderer/src/Triangle/: TriangleCommandBuffers.cpp
projects/renderer/src/vulkan/: Application.cpp  CommandBuffers.cpp  CommandPool.cpp  DebugUtilsMessenger.cpp  Device.cpp  GraphicsPipeline.cpp  Instance.cpp  QueueFamily.cpp  RenderPass.cpp  Shader.cpp  SwapChain.cpp  SyncObjects.cpp  Window.cpp
projects/renderer/src/vulkan/ImGui/: ImGuiApp.cpp  ImGuiCommandBuffer.cpp  ImGuiRenderPass.cpp
projects/triangle/: CMakeLists.txt
projects/triangle/include/vks/: Application.hpp  GraphicsPipeline.hpp
projects/triangle/src/: Application.cpp  GraphicsPipeline.cpp  main.cpp  vulkan_engine.cpp  vulkan_engine.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  window.cpp  window.hpp
vendors/: CMakeLists.txt
vendors/glfw/: CMakeLists.txt
vendors/glm/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
